# palindromus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  main.yml
docs/: Makefile  build-html.bat  make.bat  requirements.txt
docs/_build/: requirements.txt
docs/_build/html/: checking.html  examples.html  genindex.html  index.html  overview.html  search.html  searchindex.js  terms.html
docs/_build/html/_sources/: checking.rst.txt  index.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/source/: conf.py  examples.rst  index.rst  overview.rst  terms.rst
docs/source/_static/js/: stickynav.js
palindromus/: __init__.py
tests/: test_palindromus.py  test_special_funcs.py
