[project]
name="palindromus"
version="1.0.3"

[tool.coverage.run]
omit=[
    "tests/*"
]

[tool.pytest.ini_options]
markers=[
    "check_palindrome: Test palindromes",
    "special: Test special functions",
]

[tool.mypy]
ignore_missing_imports=true
no_site_packages=true
check_untyped_defs=true

[tool.isort]
profile="black"
line_length=120

[tool.ruff]
line-length=120

[tool.semantic_release]
build_command="python -m build"
version_variables=[
    "palindromus/__init__.py:__version__",
    "docs/source/conf.py:release",
]
version_toml=[
    "pyproject.toml:project.version"
]
